# pyhisics

./: .gitignore  README.md  main_debugger.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
ARIKETAK/: algebra.ipynb  ariketa.md  calculations.ipynb  eremu_mag_tests.ipynb  fisika 12 gaia.ipynb
OTHERS/: all_text.py  visualicer.md
docs/: conf.py  index.rst  unit.rst  unit_composition.rst
pyhsics/: __init__.py  _config.py
pyhsics/funcs/: __init__.py  funcs.py
pyhsics/linalg/: __init__.py  alg_printer.py  alg_types.py  algebraic_core.py  bilineal_form.py  complex_fraction.py  linear_sistem.py  matrix.py  mmatrix.py  operations.py  point.py  ppoint.py  scalar.py  sscalar.py  vector.py  vvector.py
pyhsics/measure/: __init__.py  base_measure.py  calculated_measure.py  direct_measure.py  operator_measure.py  unit_calculator.py  utils_measure.py
pyhsics/plotter/: __init__.py  multi_plotter.py  plot_measure.py  plotter.py
pyhsics/printing/: core.py  helpers.py  printable.py  printer_alg.py  printer_lin_sys.py  printer_unit.py  setup.py
pyhsics/quantity/: __init__.py  base_quantity.py  constants.py  core_quantity.py  matrix_quantity.py  operator_quantity.py  quantities.py  quantity_quantity.py  scalar_quantity.py  utils_quantity.py  vector_quantity.py
pyhsics/units/: __init__.py  alias_manager.py  basic_typing.py  fundamental_unit.py  more_units.py  parser.py  prefixed_unit.py  unit.py  unit_composition.py  unit_printer.py
test/test_linalg/: test_algebraic_core.py  test_linear_system.py  test_scalar.py  test_vector.py
(+47 files in other folders)
